Fix CSS so word wrapping stays within output box.

--- a/IPython/frontend/html/notebook/static/css/notebook.css
+++ b/IPython/frontend/html/notebook/static/css/notebook.css
@@ -240,7 +240,7 @@ div.output_area {
 /* This class is for the output subarea inside the output_area and after
    the prompt div. */
 div.output_subarea {
-    padding: 0.4em;
+    padding: 0.4em 6.1em 0.4em 0.4em;
 }
 
 /* The rest of the output_* classes are for special styling of the different
